--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,8 @@
-= redmine_version_status_filter
+# Version status filter plugin for Redmine
 
-Description goes here
+This plugin adds a new filter called "Target version status" that allows to filter issues by the status of its target version (open, locked or closed) 
+
+## Installation
+Go to your Redmine plugins directory and clone this repository as `redmine_version_status_filter`:
+
+    git clone https://github.com/javiferrer/redmine_version_status_filter.git redmine_version_status_filter
